kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app: ${APPLICATION_NAME}
    spec:
      containers:
        - name: ${APPLICATION_NAME}
          image: ${CONTAINER_IMAGE_TAGGED}
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 80
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health/live
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 3
            timeoutSeconds: 2

---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
spec:
  ports:
    - port: 80
      nodePort: ${K8S_SERVICE_PORT}
  selector:
    app: ${APPLICATION_NAME}
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME}
spec:
  rules:
    - host: leaves-api.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APPLICATION_NAME}
                port:
                  number: 80
